[package]
name = "dockpit"
version = "0.1.0"
edition = "2021"

# Binary only, no library
[[bin]]
name = "dockpit"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.19"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
